@@ -1,5 +1,5 @@
 ## Process this file with automake to produce Makefile.in
-# "$Id: Makefile.am,v 1.16 2003-01-14 17:08:11 jeekay Exp $"
+# "$Id: Makefile.am,v 1.17 2003-04-09 21:12:00 jeekay Exp $"
 
 lib_LTLIBRARIES = libcservice.la
 libcservice_la_LDFLAGS = -module -export-dynamic -L@PGSQL_LIB@ \
@@ -52,7 +52,6 @@ libcservice_la_SOURCES = cservice.cc \
 	PARTCommand.cc \
 	PURGECommand.cc \
 	QUOTECommand.cc \
-	RANDOMCommand.cc \
 	RECOVERCommand.cc \
 	REGISTERCommand.cc \
 	REHASHCommand.cc \
