@@ -1,5 +1,5 @@
 #ifndef __CSERVICECOMMANDS_H
-#define __CSERVICECOMMANDS_H "$Id: cserviceCommands.h,v 1.17 2003-01-14 17:08:12 jeekay Exp $"
+#define __CSERVICECOMMANDS_H "$Id: cserviceCommands.h,v 1.18 2003-04-09 21:12:00 jeekay Exp $"
 
 #include	<string>
 #include	"iClient.h"
@@ -78,7 +78,6 @@ DECLARE_COMMAND( HELP )
 DECLARE_COMMAND( ISREG )
 DECLARE_COMMAND( SHOWIGNORE )
 DECLARE_COMMAND( VERIFY )
-DECLARE_COMMAND( RANDOM )
 DECLARE_COMMAND( SUPPORT )
 DECLARE_COMMAND( NOTE )
 DECLARE_COMMAND( RECOVER )
